@@ -1,3 +1,7 @@
+2012-12-10  JJ Allaire <jj@rstudio.org>
+
+        * src/Timer.cpp: fix timer build issues on windows
+
 2012-12-10 Romain Francois <romain@r-enthusiasts.com>
 
         * src/api.cpp: import r_cast.cpp, coerce.cpp, RcppCommon.cpp
